test/parser/types_error.dmz
// RUN: dmz %s -ast-dump 2>&1 | filecheck %s
fn main() -> void {
    
    // CHECK: [[# @LINE + 1 ]]:17: error: expected expression
    let e: u8 = 'c;
    // CHECK: [[# @LINE + 1 ]]:18: error: expected expression
    let e: *u8 = "Hello error
}